# Rustemon

./: .gitignore  BITCRUSH.NOTE  BITCRUSH.txt  Cargo.toml  README.TXT  TODO.txt  build.rs  buildtargets.sh  cfg.txt  debug.sh  enumnames.txt  import.rs  import.sh  incremental_vs_not.txt  nopack.sh  pokemon_structs  realnames.txt  run.sh  stats.txt  types.txt
.cargo/: config  config.toml
.github/workflows/: rust.yml
sound/: trimaudio.sh
src/: interface.rs  main.rs  moves.rs  natures.rs  saves.rs  types.rs
src/animation_data/: intro.rs
src/area/: mod.rs
src/extras/: mod.rs
src/menu/: mod.rs
src/tile_to_ascii/: mod.rs
