[package]
name = "pokemon_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
tui = "0.19.0"
