[package]
name = "pokemon_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.1"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
default-features = false
features = ["ttf","image","gfx","mixer"]
